# Medieval_War

./: .gitignore  desktop.ini
Client/: MyProject.sln
Client/Binaries/Win64/: MyProjectEditor.target  UnrealEditor-MyProject.exp
Client/Config/: DefaultEngine.ini
Client/Content/ProjectContent/: SandBox.umap
Client/MW/: MW.sln  MW.uproject
Client/MW/Config/: DefaultEngine.ini  DefaultGame.ini
Client/MW/Map/: heightmap_meta.txt
Client/MW/Source/: MW.Target.cs  MWEditor.Target.cs
Client/MyProject/: MyProject.sln
Client/MyProject/Config/: DefaultEngine.ini  DefaultGame.ini
Client/Saved/Logs/: UnrealVersionSelector-2025.04.17-10.59.15.json
Config/: DefaultEngine.ini
Content/ProjectContent/Character/: Platemail.uasset  knight1_Platemail_BaseColor.uasset  knight1_chainmail_BaseColor.uasset  knight1_chainmail_OcclusionRoughnessMetallic.uasset  knight1_leather_BaseColor.uasset  knight1_leather_OcclusionRoughnessMetallic.uasset  knight1_rig_Anim.uasset  knight1_rig_PhysicsAsset.uasset  knight1_rig_Skeleton.uasset  knight_low_real_Platemail_BaseColor_Mat.uasset  knight_low_real_Platemail_Mat.uasset  knight_low_real_chainmail_BaseColor_Mat.uasset  knight_low_real_chainmail_Mat.uasset  knight_low_real_chainmail_OcclusionRoughnessMetallic_Mat.uasset  knight_low_real_leather_BaseColor.uasset  knight_low_real_leather_BaseColor_Mat.uasset  knight_low_real_leather_OcclusionRoughnessMetallic_Mat.uasset  leather.uasset
Content/ProjectContent/Gameplay/: BP_GameMode.uasset  MyCharacter.uasset  MyGameMode.uasset  StateOfCharacter.uasset
Content/ProjectContent/Input/: Attack.uasset  Crouch.uasset  My_IMC.uasset  Run.uasset
Content/ProjectContent/Monster/: BP_Monster.uasset
Content/ProjectContent/UI/: WB_GamePlay.uasset  WB_MainMenu.uasset
Content/ProjectContent/Weapon/: sword.uasset  sword_Material_Mat.uasset
Content/ProjectContent/Widget/: mainmenu.uasset
Content/ProjectContent/animations/: BS_Move.uasset  Idle_PhysicsAsset.uasset  Platemail_003.uasset  Stable_Sword_Inward_Slash.uasset  Stable_Sword_Outward_Slash_Montage.uasset  chainmail_006.uasset  knight_animbp.uasset  leather_006.uasset
Content/ProjectContent/maps/: MainMenuMap.umap
Model/knight1/knight1_animation/: Idle.fbx  Run With Sword.fbx  Stable Sword Inward Slash.fbx  Walking (1).fbx  knight1 Back run.fbx  knight1 Back walk.fbx  knight1 Death.fbx  knight1 Run.fbx
Model/knight1/knight1_model/: knight1_rig.fbx
Model/knight2/knight2_animation/: Run With Sword.fbx  Stable Sword Inward Slash.fbx  knight2 Idle_3.fbx  knight2 Inward Slash.fbx  knight2 Jump.fbx  knight2 Outward Slash.fbx  knight2 Run.fbx  knight2 Sitting attack.fbx  knight2 Sitting.fbx
Model/weapon/: sword.fbx
Server/: 미디블 워_박정환_김재혁.pptx
Server/Dummy/: Dummy.sln  Dummy.uproject  UpgradeLog.htm
Server/IOCPServer/: CMakeLists.txt  IOCPServer.sln  README.md
Server/IOCPServer/IOCPServer/: ClientManager.cpp  ClientManager.h  ClientSession.cpp  ClientSession.h  GameUpdater.cpp  GameUpdater.h  IOCPServer.cpp  IOCPServer.h  IOCPServer.vcxproj  IOCPServer.vcxproj.filters  Logger.cpp  NetworkManager.cpp  NetworkManager.h  NetworkSessionManager.cpp  NetworkSessionManager.h  PacketDispatcher.cpp  PacketDispatcher.h  PacketTypes.h  main.cpp
Server/IOCPServer/IOCPServer/Header Files/Core/: ClientSession.h  Logger.h
Server/IOCPServer/IOCPServer/Header Files/Game/: GameUpdater.h
Server/IOCPServer/IOCPServer/Header Files/Network/: PacketDispatcher.h
Server/IOCPServer/IOCPServer/Source Files/Core/: ClientSession.cpp
Server/IOCPServer/IOCPServer/Source Files/Game/: GameUpdater.cpp  IOCPServer.cpp
Server/IOCPServer/IOCPServer/Source Files/Network/: ClientManager.cpp  PacketDispatcher.cpp
Server/IOCP_Server/: IOCP_Server.sln
Server/Medieval_War/: Medieval_War.sln  Medieval_War.uproject
Server/MultiplayerGame/: MultiplayerGame.sln  MultiplayerGame.uproject
Server/dummy_client/: dummy_client.sln  dummy_client.uproject
Server/server/: server.sln
knight1/knight1_animation/: Idle.fbx  Idle_2.fbx  Idle_3.fbx  Jump.fbx  Running.fbx  Shield.fbx  Sitting shield.fbx  Stable Sword Outward Slash.fbx  Walk.fbx  knight1 Sitting attack.fbx  knight1 Sitting.fbx
knight2/knight2_animation/: Running.fbx  Stable Sword Outward Slash.fbx  Walking.fbx  knight2 Back run.fbx  knight2 Back walk.fbx  knight2 Death.fbx  knight2 Idle.fbx  knight2 Idle_2.fbx  knight2 Shield.fbx  knight2 Sitting Shield.fbx  knight2 Walk.fbx
knight2/knight2_model/: desktop.ini
knight3/: knight3_Idle .fbx  knight3_rig.fbx  knight3_uv.fbx
knight3/knight3_animation/: knight3 Run.fbx  knight3_idle.fbx  knight3_walk.fbx
weapon/: axe.fbx  desktop.ini  shield.fbx
(+1504 files in other folders)
